# rurl

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  MANPAGE.md  MIGRATION_FROM_CURL.md  Makefile  README.md  TASK.md  TUTORIAL.md  cspell.json  setup.sh
.cargo/: config.toml
.github/workflows/: basic.yml  ci.yml  release.yml
docs/: GIT_RULES.md  LOCAL_DEVELOPMENT.md  MIGRATION_FROM_CURL.md  PACKAGING.md  PUBLISHING.md  RUST_CODING_GUIDELINES.md  TASK-1.1.0.md  TASK.md  TUTORIAL.md  WORKING_PRINCIPLES.md
locales/en-US/: messages.ftl
locales/ja-JP/: messages.ftl
src/: config.rs  error.rs  exit_code.rs  i18n.rs  lib.rs  logging.rs  main.rs  output.rs  ssl.rs  utils.rs
src/browser/: chrome.rs  edge.rs  firefox.rs  mod.rs  safari.rs
src/browser/chrome/: linux.rs  macos.rs  mod.rs  windows.rs
src/browser/edge/: tests.rs
src/browser/firefox/: linux.rs  macos.rs  mod.rs  windows.rs
src/browser/safari/: tests.rs
src/cli/: args.rs  mod.rs  runner.rs
src/http/: auth.rs  mod.rs  request.rs  response.rs
src/output/: tests.rs
src/ssl/: tests.rs
src/utils/: tests.rs
tests/: basic.rs  browser_cookies.rs  cli_integration.rs  http_auth.rs  http_body.rs  http_headers.rs  http_methods.rs  http_redirects.rs  http_retry.rs  output_format.rs  performance.rs
