[package]
name = "rurl"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
authors = ["rurl development team"]
description = "A modern curl alternative written in Rust with browser cookie support"
license = "MIT"
repository = "https://github.com/izuno4t/rurl"
keywords = ["http", "curl", "browser", "cookies", "cli"]
categories = ["command-line-utilities", "web-programming::http-client"]

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.11", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "rustls-tls",
    "stream",
    "multipart"
] }
tokio = { version = "1.0", features = ["full"] }

# Browser cookie extraction (will be integrated later)
# rookie = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.10"
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL handling
url = "2.4"

# File system operations
dirs = "5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3.8"

# Base64 encoding for authentication
base64 = "0.21"

# Crypto for Chrome cookie decryption
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
sha1 = "0.10"

# Cross-platform support
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wincrypt"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "3.1", default-features = false, features = ["rt-tokio-crypto-openssl"] }

[dev-dependencies]
httpmock = "0.7"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
debug = true
